--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<body>
-    <h1>Willkommen zu meinem persönlichen und Interaktiven Freundebuch!</h1>
-    <!DOCTYPE html>
-<html lang="de">
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linhs Freundebuch ♥</title>
-    <style>
-        body {
-            font-family: "Arial", sans-serif; /* Weibliche Schrift */
-            background-color: #FFE8E7; /* Hintergrundfarbe */
-
-        h1 {
-            color: #ffb6c1; /* Babypink Farbcode */
-            text-align: center; /* Zentriert den Text horizontal */
-            font-size: 40px; /* Größere Schriftgröße für die Überschrift */
-        }
-        }
-        p {
-            text-align: center; /* Zentriert den Text horizontal */
-            color: #ffb6c1; /* Babypink Farbcode für den Text im <p> Element */
-            font-size: 30px; /* Größere Schriftgröße für den Text im <p> Element */
-                   font-family: "Arial", sans-serif; /* Weibliche Schrift */
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="index.css"/>
 </head>
 <body>
-<p>Hier kannst du dich gerne verewigen ♥</p>
-<body>
+
+   <div class="top-nav">
+    <a href="übermich.html" class="heart-button small-link1">Über mich</a>
+    <a href="bounty.html" class="heart-button small-link2">Bounty</a>
+    <a href="kontakt.html" class="heart-button small-link3">Kontakt</a>
+    <a href="weiterführender-link.html">
+        <img src="clipart4679360.png" class="Bildes" alt="Beschreibung des Bildes">
+    </a>
+
+
+    
+</div>
+    <div class="content">
+        <div class="content-left">
+            <h1>Willkommen zu meinem<br>persönlichen und Interaktiven<br>Freundebuch!</h1>
+            <p>Hier kannst du dich gerne verewigen ♥</p>
+            <p>Drücke auf die Ente ♥</p>
+            <a href="schreiben.html" class="heart-button large-link">
+                Schreibe jetzt in mein Freundebuch ❀♡♪
+            </a>
+        </div>
+        <div class="content-right">
+            <img src="./Blubzy.jpg">
+        </div>
+
+        
+
+    </div>
 </body>
 </html>
-
-    <img src="https://i.pinimg.com/474x/1c/ec/42/1cec4247e01f9c3aff7f942bde0b3fdd.jpg" alt="Beschreibung des Bildes">
-</body>
-</html>
-
-    </body>
