--- a/nextPage.html
+++ b/nextPage.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script defer src="schreiben.js"></script>
+    <style>
+        .next-page-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+        }
+    </style>
 </head>
 <body>
     <div id="p3" class="mdl-progress mdl-js-progress"></div>
@@ -36,16 +44,9 @@
             <span class="mdl-layout-title">Freundebuch Eintrag</span>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link" href="Lieblingslied.html">Lieblingslied hinzufügen</a>
-                <a class="mdl-navigation__link" href="Nachricht.html">Nachricht hinterlassen</a>
+                <a class="mdl-navigation__link" href="#">Nachricht hinterlassen</a>
             </nav>
         </div>
-        <div class="container">
-                    <img src="" alt="Hochgeladenes Bild" id="uploaded-image" style="display: none;">
-                    <input type="file" id="image-upload" style="display: none;">
-                    <button class="button" id="add-image-button">Bild hinzufügen</button>
-                    <button class="button" id="change-image-button">Bild ändern</button>
-                    <button class="button" id="delete-image-button">Bild löschen</button>
-                </div>
         <main class="mdl-layout__content">
             <div class="page-content">
                 <!-- Form for questions and answers -->
@@ -66,16 +67,26 @@
                 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" id="qa-table">
                     <thead>
                         <tr>
-                            <th class="mdl-data-table__cell--non-numeric">Frage</th>
-                            <th class="mdl-data-table__cell--non-numeric">Antwort</th>
+                            <th class="mdl-data-table__cell--non-numeric frage">Frage</th>
+                            <th class="mdl-data-table__cell--non-numeric antwort">Antwort</th>
                         </tr>
                     </thead>
                     <tbody>
                         <!-- Dynamic content will be added here -->
                     </tbody>
                 </table>
-            
+                <div class="container">
+                    <img src="" alt="Hochgeladenes Bild" id="uploaded-image" style="display: none;">
+                    <input type="file" id="image-upload" style="display: none;">
+                    <button class="button" id="add-image-button">Bild hinzufügen</button>
+                    <button class="button" id="change-image-button">Bild ändern</button>
+                    <button class="button" id="delete-image-button">Bild löschen</button>
+                </div>
             </div>
+            <!-- Button to go to the next page -->
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored next-page-button" onclick="nextPage()">
+                <i class="material-icons">arrow_forward</i>
+            </button>
         </main>
     </div>
 </body>
